Fixes and tests with line coverage 90%